--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">tareas_pendientes</string>
+    <string name="app_name">proyecto_basico</string>
 </resources>
